--- a/day04/newflix_01/css/global.css
+++ b/day04/newflix_01/css/global.css
@@ -2,3 +2,23 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons+Outlined");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
+@import "./reset.css";
+@import "./variable.css";
+
+* {
+    /* 모든 요소를 화면 안에 포함시키겠다. */
+    box-sizing: border-box;   
+}
+
+body {
+       background-color: var(--black);
+       color: white;
+       font-family: "Roboto", sans-serif;
+      }
+
+input {
+ 
+      border: none;
+      outline: none;
+      appearance: none;
+}
