--- a/day04/profile/style1.css
+++ b/day04/profile/style1.css
@@ -9,60 +9,64 @@ body {
                         
 /* card의 스타일 태그입니다. 배경색과 정렬, 크기 등을 담당합니다. */
 .card {
-     background-color: #fff;
-     max-width: 360px;
-     display: flex;
-     flex-direction: column;
-     overflow: hidden;
-     border-radius: 2rem;
-     box-shadow: 0px 1rem 1.5rem rgba(0, 0, 0, 0.5);
-
+  background-color: #fff;
+  max-width: 360px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  border-radius: 2rem;
+  box-shadow: 0px 1rem 1.5rem rgba(0, 0, 0, 0.5);
 }
 
 /* banner의 스타일 태그입니다. 배너 이미지 및 정렬 등을 담당합니다. */
-     .banner {
-        background-image: url("space-pattern.jpg");
-        display: flex;
-        justify-content: center;
-        position: relative;
-
-     }
+.banner {
+  background-image: url("space-pattern.jpg");
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  position: relative;
+  height: 200px;
+ 
+}
 
 /* profile의 스타일 태그입니다. 프로필 크기와 사진 등을 담당합니다. */
 .profile {
-     
-     width: 8rem;
-     height: 8rem;
-     background-image: url(myprofile.jpg);
-     background-size: 120px;
-     border-radius: 50%;
-     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3); 
-     transform: translateY(50%); 
-     animation: rotabeProfile 2.5s infinite;
+  width: 8rem;
+  height: 8rem;
+  background-image: url(myprofile.jpg);
+  background-size: cover;
+  
+  border-radius: 50%;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+  position: absolute;
+ 
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotateY(0deg);
+  
+  animation: rotabeProfile 2.5s infinite;
 }
-  @keyframes rotabeProfile {
-        from {
-            transform: perspective(200px) rotateY(0deg);
-          }
-        
-          50% {
-            transform: perspective(200px) rotateY(-180deg);
-          }
-        
-          to {
-            transform: perspective(200px) rotateY(-360deg);
-          }
+
+@keyframes rotabeProfile {
+  from {
+    transform: translate(-50%, -50%) perspective(200px) rotateY(0deg);
   }
 
+  50% {
+    transform: translate(-50%, -50%) perspective(200px) rotateY(-180deg);
+  }
 
-  
+  to {
+    transform: translate(-50%, -50%) perspective(200px) rotateY(-360deg);
+  }
+}
 
 /* profile의 크기 변형 값 */
- .profile:hover {
-     transform: translateY(50%) scale(1.3);
-
- }
-
+.profile:hover {
+  transform: translate(-50%, -50%) scale(1.3);
+ 
+}
 /* name의 스타일 태그입니다. 글자 정렬과 간격을 담당합니다. */
 .name {
    text-align: center;
