--- a/day04/newflix_02/css/variable.css
+++ b/day04/newflix_02/css/variable.css
@@ -1,6 +1,6 @@
 :root {
-  --background-black: #000000;
-  --darkblack: #fa0e0e;
+  --purple: #6644b8;
+  --darkpurple: #37274b;
   --background-purple: #120522;
   --border-color: rgba(255, 255, 255, 0.5);
 }
