--- a/day04/newflix copy/css/mypage.css
+++ b/day04/newflix copy/css/mypage.css
@@ -30,7 +30,7 @@
 /************************************************************/
 
 .continue p{
-  margin-bottom: 15px;
+  margin: 15px 0;
 }
 
 .continue{
@@ -41,15 +41,79 @@
   display: flex;
 }
 
-.continue-direction {
-  
+
+
+.continue-list span{
+  display: block;
+  margin-top: 0.3rem;
 }
 
-.continue-direction span{
-  display: block;
+.continue-list li {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  margin: 0 0.5rem;
+}
+
+.continue-list--card {
+  
+  padding: 5px;
+  border-radius: 7%;
+  position: relative;
+  border-radius: 7%;
+  display: grid;
+  padding: 8px;
+}
+
+.continue-list--card::before {
+  
+  content: "";
+  background-color: var(--purple);
+  position: absolute;
+  opacity: 40%;
+  width: 100%;
+  height: 100%;
+  border-radius: 7%;
+  z-index: -1;
 }
 
 .continue-list img{
   width: 200px;
   height: 120px;
+  border-radius: 7%;
+  
+}
+
+hr {
+  background: var(--border-color);
+  border: 0;
+  height: 1px;
+}
+
+/**********************************************************************/
+
+.wishlist {
+  display: block;
+}
+
+.wishlist--item {
+  width: 100%;
+  height: 100px;
+  background-color: var(--purple);
+  margin: 15px 5px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+
+}
+
+.wishlist img {
+  width: 70px;
+  height: 70px;
+  border-radius: 10%;
+}
+
+.wishlist--item--contents{
+  display: flex;
+  flex-direction: column;
 }
